# stoolap

./: .gitignore  AGENTS.md  Cargo.toml
benches/: hexary_proof.rs  stark_proof.rs
cairo/: build.rs  hexary_verify.cairo  merkle_batch.cairo  state_transition.cairo
docs/: CAIRO_PROGRAMS.md  DEPENDENCIES.md
docs/plans/: 2025-02-28-hexary-proof-implementation.md  2025-03-01-trie-extension-fix.md
docs/use-cases/: trie-sequential-lookups.md
missions/archived/: 0105-trie-extension-fix.md  0106-stark-proof-benchmarks.md  0201-03-cairo-compiler-integration.md  0201-04-stark-proof-types.md  0201-05-prover-interface.md  0201-07-integration-tests.md  0202-02-proof-generation.md  0202-03-proof-verification.md
missions/claimed/: 0201-01-stwo-dependency.md  0201-02-cairo-program-types.md  0201-03-cairo-compiler-integration.md  0201-04-stark-proof-types.md  0201-06-core-cairo-programs.md  0201-07-integration-tests.md  0202-01-compressed-proof-types.md
missions/open/: 0105-trie-extension-fix.md  0106-stark-proof-benchmarks.md  0202-03-proof-verification.md  0203-02-confidential-query-types.md  0203-03-query-execution.md  0203-04-result-verification.md  0204-01-rollup-types.md  0204-02-batch-execution.md  0204-03-batch-submission.md  0204-04-fraud-proofs.md  0204-05-withdrawals.md
rfcs/: 0105-trie-extension-key-slicing.md  0106-stark-proof-benchmarks.md  0201-stwo-cairo-integration.md  0202-compressed-proofs.md  0203-confidential-queries.md  0204-l2-rollup.md  0205-stwo-plugin-architecture.md
src/: lib.rs
src/determ/: collections.rs  mod.rs  row.rs  tests.rs  value.rs
src/rollup/: execution.rs  fraud.rs  mod.rs  submission.rs  types.rs  withdrawal.rs
src/trie/: mod.rs  proof.rs  row_trie.rs  schema_trie.rs
src/trie/tests/: mod.rs  proof_tests.rs  (+1 more)
src/zk/: bundled.rs  cairo.rs  commitment.rs  compressed.rs  confidential.rs  mod.rs  plugin.rs  prover.rs
stwo-bench/: Cargo.toml  stwo_proof.rs
stwo-plugin/: Cargo.toml  rust-toolchain.toml
stwo-plugin/src/: lib.rs  verify.rs
