[package]
name = "stwo-bench"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
stoolap = { path = "..", features = ["zk"] }
stwo-cairo-prover = { path = "/home/mmacedoeu/_w/crypto/stwo-cairo/stwo_cairo_prover/crates/prover" }
stwo-cairo-adapter = { path = "/home/mmacedoeu/_w/crypto/stwo-cairo/stwo_cairo_prover/crates/adapter" }
stwo = "2.1"
criterion = "0.5"
serde_json = "1.0"

[[bench]]
name = "stwo_proof"
path = "stwo_proof.rs"
harness = false
