[package]
name = "stwo-bench"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
stoolap = { path = "..", features = ["zk"] }
stwo-cairo-prover = { git = "https://github.com/starkware-libs/stwo-cairo.git", tag = "v1.1.0", package = "stwo-cairo-prover" }
stwo-cairo-adapter = { git = "https://github.com/starkware-libs/stwo-cairo.git", tag = "v1.1.0", package = "stwo-cairo-adapter" }
stwo = "2.1"
cairo-air = { git = "https://github.com/starkware-libs/stwo-cairo.git", tag = "v1.1.0", package = "cairo-air" }
sonic-rs = "0.4"
criterion = "0.5"
serde_json = "1.0"

[[bench]]
name = "stwo_proof"
path = "stwo_proof.rs"
harness = false
