[package]
name = "stwo-plugin"
version = "0.1.0"
edition = "2021"
description = "STWO verification plugin for stoolap"
repository = "https://github.com/mmacedoeu/stoolap"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cairo-air = { git = "https://github.com/starkware-libs/stwo-cairo.git", tag = "v1.1.0" }
stwo = "2.1"
stwo-cairo-prover = { git = "https://github.com/starkware-libs/stwo-cairo.git", tag = "v1.1.0", package = "stwo-cairo-prover" }
stwo-cairo-adapter = { git = "https://github.com/starkware-libs/stwo-cairo.git", tag = "v1.1.0", package = "stwo-cairo-adapter" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[build-dependencies]
